--- a/20 hashmati.github.io/books.html
+++ b/20 hashmati.github.io/books.html
@@ -155,6 +155,33 @@
   	<!-- Page Header End here -->
 
 
+	  	<!-- banner-search Start here -->
+		  <section class="banner-search section-bg padding-120">
+			<div class="container">
+				<form>
+					<select class="bn-search-opt">
+						<option>All Categories</option>
+						<option>Book 1</option>
+						<option>Book 2</option>
+						<option>Book 3</option>
+						<option>Book 4</option>
+						<option>Book 5</option>
+						<option>Book 6</option>
+						<option>Book 7</option>
+					</select>
+					<select class="bn-search-opt">
+						<option>Book Lavel</option>
+						<option>Volume 1</option>
+						<option>Volume 2</option>
+						<option>Volume 3</option>
+					</select>
+					<input class="bn-search-opt" type="search" name="search" placeholder="Books Keyword...">
+					<button>Search Books</button>
+				</form>
+			</div><!-- container -->
+		</section><!-- banner-search -->
+		<!-- banner-search End here -->
+
   
   	<!-- Courses Start here -->
   	<section class="courses padding-120">
@@ -187,6 +214,36 @@
 						<div class="course-item">
 							<div class="image">
 								<img src="images/courses/15.jpeg" alt="course image" class="img-responsive">
+							</div>
+						</div><!-- course item -->
+					</div>
+					</div>
+					<div class="row">
+						<div class="col-md-3 col-sm-3 col-xs-3">
+							<div class="course-item">
+								<div class="image">
+									<img src="images/courses/16.jpeg" alt="course image" class="img-responsive">
+								</div>
+							</div><!-- course item -->
+						</div>
+						<div class="col-md-3 col-sm-3 col-xs-3">
+						  <div class="course-item">
+							  <div class="image">
+								  <img src="images/courses/17.jpeg" alt="course image" class="img-responsive">
+							  </div>
+						  </div><!-- course item -->
+					  </div>
+					  <div class="col-md-3 col-sm-3 col-xs-3">
+						  <div class="course-item">
+							  <div class="image">
+								  <img src="images/courses/18.jpeg" alt="course image" class="img-responsive">
+							  </div>
+						  </div><!-- course item -->
+					  </div>
+					  <div class="col-md-3 col-sm-3 col-xs-3">
+						<div class="course-item">
+							<div class="image">
+								<img src="images/courses/19.jpeg" alt="course image" class="img-responsive">
 							</div>
 						</div><!-- course item -->
 					</div>
