--- a/21 mosque-website-template/index.html
+++ b/21 mosque-website-template/index.html
@@ -52,7 +52,7 @@
                             </div>
                             <div class="h-100 d-inline-flex align-items-center">
                                 <span class="far fa-envelope me-2 text-dark"></span>
-                                <a href="#" class="text-secondary"><span>info@example.com</span></a>
+                                <a href="#" class="text-secondary"><span>info@abulfatah.com</span></a>
                             </div>
                         </div>
                         <div class="col-lg-5 text-end">
@@ -80,9 +80,9 @@
                         <div class="navbar-nav ms-lg-auto mx-xl-auto">
                             <a href="index.html" class="nav-item nav-link active">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
-                            <a href="activity.html" class="nav-item nav-link">Activities</a>
+                            <a href="activity.html" class="nav-item nav-link">Books</a>
                             <a href="event.html" class="nav-item nav-link">Events</a>
-                            <a href="sermon.html" class="nav-item nav-link">Sermons</a>
+                            <a href="sermon.html" class="nav-item nav-link">Media</a>
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                                 <div class="dropdown-menu m-0 rounded-0">
@@ -94,7 +94,6 @@
                             </div>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
-                        <a href="" class="btn btn-primary py-2 px-4 d-none d-xl-inline-block">Donate</a>
                     </div>
                 </nav>
             </div>
@@ -128,11 +127,11 @@
         <div class="container-fluid activities py-5">
             <div class="container py-5">
                 <div class="mx-auto text-center mb-5 wow fadeIn" data-wow-delay="0.1s" style="max-width: 700px;">
-                    <p class="fs-5 text-uppercase text-primary">Activities</p>
-                    <h1 class="display-3">Here Are Our Activities</h1>
+                    <p class="fs-5 text-uppercase text-primary">Books</p>
+                    <h1 class="display-3">Here Are Our Books</h1>
                 </div>
                 <div class="row g-4">
-                    <div class="col-lg-6 col-xl-4">
+                    <div class="col-lg-6 col-xl-3">
                         <div class="activities-item p-4 wow fadeIn" data-wow-delay="0.1s">
                             <i class="fa fa-mosque fa-4x text-dark"></i>
                             <div class="ms-4">
@@ -142,7 +141,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-xl-4">
+                    <div class="col-lg-6 col-xl-3">
                         <div class="activities-item p-4 wow fadeIn" data-wow-delay="0.3s">
                             <i class="fa fa-donate fa-4x text-dark"></i>
                             <div class="ms-4">
@@ -152,7 +151,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-xl-4">
+                    <div class="col-lg-6 col-xl-3">
                         <div class="activities-item p-4 wow fadeIn" data-wow-delay="0.5s">
                             <i class="fa fa-quran fa-4x text-dark"></i>
                             <div class="ms-4">
@@ -162,31 +161,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-xl-4">
+                    <div class="col-lg-6 col-xl-3">
                         <div class="activities-item p-4 wow fadeIn" data-wow-delay="0.1s">
                             <i class="fa fa-book fa-4x text-dark"></i>
                             <div class="ms-4">
                                 <h4>Hadith & Sunnah</h4>
-                                <p class="mb-4">Lorem ipsum dolor sit amet elit. Donec tempus eros vel dolor mattis aliquam.</p>
-                                <a href="" class="btn btn-primary px-3">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-xl-4">
-                        <div class="activities-item p-4 wow fadeIn" data-wow-delay="0.3s">
-                            <i class="fa fa-book-open fa-4x text-dark"></i>
-                            <div class="ms-4">
-                                <h4>Parent Education</h4>
-                                <p class="mb-4">Lorem ipsum dolor sit amet elit. Donec tempus eros vel dolor mattis aliquam.</p>
-                                <a href="" class="btn btn-primary px-3">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-xl-4">
-                        <div class="activities-item p-4 wow fadeIn" data-wow-delay="0.5s">
-                            <i class="fa fa-hands fa-4x text-dark"></i>
-                            <div class="ms-4">
-                                <h4>Help Orphans</h4>
                                 <p class="mb-4">Lorem ipsum dolor sit amet elit. Donec tempus eros vel dolor mattis aliquam.</p>
                                 <a href="" class="btn btn-primary px-3">Read More</a>
                             </div>
