--- a/21 mosque-website-template/testimonial.html
+++ b/21 mosque-website-template/testimonial.html
@@ -40,6 +40,7 @@
         <!-- Spinner End -->
 
 
+       
         <!-- Topbar start -->
         <div class="container-fluid fixed-top">
             <div class="container topbar d-none d-lg-block">
@@ -52,7 +53,7 @@
                             </div>
                             <div class="h-100 d-inline-flex align-items-center">
                                 <span class="far fa-envelope me-2 text-dark"></span>
-                                <a href="#" class="text-secondary"><span>info@example.com</span></a>
+                                <a href="#" class="text-secondary"><span>info@abulfatah.com</span></a>
                             </div>
                         </div>
                         <div class="col-lg-5 text-end">
@@ -78,23 +79,22 @@
                     </button>
                     <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
                         <div class="navbar-nav ms-lg-auto mx-xl-auto">
-                            <a href="index.html" class="nav-item nav-link">Home</a>
+                            <a href="index.html" class="nav-item nav-link active">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
-                            <a href="activity.html" class="nav-item nav-link">Activities</a>
+                            <a href="activity.html" class="nav-item nav-link">Books</a>
                             <a href="event.html" class="nav-item nav-link">Events</a>
-                            <a href="sermon.html" class="nav-item nav-link">Sermons</a>
+                            <a href="sermon.html" class="nav-item nav-link">Media</a>
                             <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
+                                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                                 <div class="dropdown-menu m-0 rounded-0">
                                     <a href="blog.html" class="dropdown-item">Latest Blog</a>
                                     <a href="team.html" class="dropdown-item">Our Team</a>
-                                    <a href="testimonial.html" class="dropdown-item active">Testimonial</a>
+                                    <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                                     <a href="404.html" class="dropdown-item">404 Page</a>
                                 </div>
                             </div>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
-                        <a href="" class="btn btn-primary py-2 px-4 d-none d-xl-inline-block">Donate</a>
                     </div>
                 </nav>
             </div>
