--- a/21 mosque-website-template/index.html
+++ b/21 mosque-website-template/index.html
@@ -108,7 +108,8 @@
                     <div class="col-lg-7">
                         <div class="hero-header-inner animated zoomIn">
                             <p class="fs-4 text-dark">WELCOME TO ABUL FATAH</p>
-                            <h1 class="display-1 mb-5 text-dark">Purity Comes From Faith</h1>
+                            <img src="./img/events-1.jpg" />
+                            <!-- <h1 class="display-1 mb-5 text-dark">Purity Comes From Faith</h1> -->
                             <a href="" class="btn btn-primary py-3 px-5">Read More</a>
                         </div>
                     </div>
