--- a/21 mosque-website-template/index.html
+++ b/21 mosque-website-template/index.html
@@ -127,10 +127,7 @@
         <!-- Activities Start -->
         <div class="container-fluid activities py-5">
             <div class="container py-5">
-                <div class="mx-auto text-center mb-5 wow fadeIn" data-wow-delay="0.1s" style="max-width: 700px;">
-                    <p class="fs-5 text-uppercase text-primary">Books</p>
-                    <h1 class="display-3">Here Are Our Books</h1>
-                </div>
+                <h1 class="display-6 mb-5 wow fadeIn" data-wow-delay="0.1s">Islamic <span class="text-primary">Books</span></h1>
                 <div class="row g-4">
                     <div class="col-lg-6 col-xl-3">
                         <div class="activities-item p-4 wow fadeIn" data-wow-delay="0.1s">
@@ -181,7 +178,7 @@
         <!-- Events Start -->
         <div class="container-fluid event py-5">
             <div class="container py-5">
-                <h1 class="display-3 mb-5 wow fadeIn" data-wow-delay="0.1s">Upcoming <span class="text-primary">Events</span></h1>
+                <h1 class="display-6 mb-5 wow fadeIn" data-wow-delay="0.1s">Upcoming <span class="text-primary">Events</span></h1>
                 <div class="row g-4 event-item wow fadeIn" data-wow-delay="0.1s">
                     <div class="col-3 col-lg-2 pe-0">
                         <div class="text-center border-bottom border-dark py-3 px-2">
