--- a/21 mosque-website-template/index.html
+++ b/21 mosque-website-template/index.html
@@ -130,42 +130,34 @@
                 <h1 class="display-6 mb-5 wow fadeIn" data-wow-delay="0.1s">Islamic <span class="text-primary">Books</span></h1>
                 <div class="row g-4">
                     <div class="col-lg-6 col-xl-3">
-                        <div class="activities-item p-4 wow fadeIn" data-wow-delay="0.1s">
-                            <i class="fa fa-mosque fa-4x text-dark"></i>
+                        <div class="activities-item p-4 wow fadeIn" data-wow-delay="0.1s" style="flex-direction:column">
+                            <img src="./img/11.jpeg" class="img-fluid" alt="">
                             <div class="ms-4">
-                                <h4>Mosque Development</h4>
-                                <p class="mb-4">Lorem ipsum dolor sit amet elit. Donec tempus eros vel dolor mattis aliquam.</p>
-                                <a href="" class="btn btn-primary px-3">Read More</a>
+                                <a href="" class="btn btn-primary px-3" style="margin-top:10px;">Read More</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-xl-3">
-                        <div class="activities-item p-4 wow fadeIn" data-wow-delay="0.3s">
-                            <i class="fa fa-donate fa-4x text-dark"></i>
+                        <div class="activities-item p-4 wow fadeIn" data-wow-delay="0.1s" style="flex-direction:column">
+                            <img src="./img/12.jpeg" class="img-fluid" alt="">
                             <div class="ms-4">
-                                <h4>Charity & Donation</h4>
-                                <p class="mb-4">Lorem ipsum dolor sit amet elit. Donec tempus eros vel dolor mattis aliquam.</p>
-                                <a href="" class="btn btn-primary px-3">Read More</a>
+                                <a href="" class="btn btn-primary px-3" style="margin-top:10px;">Read More</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-xl-3">
-                        <div class="activities-item p-4 wow fadeIn" data-wow-delay="0.5s">
-                            <i class="fa fa-quran fa-4x text-dark"></i>
+                        <div class="activities-item p-4 wow fadeIn" data-wow-delay="0.1s" style="flex-direction:column">
+                            <img src="./img/13.jpeg" class="img-fluid" alt="">
                             <div class="ms-4">
-                                <h4>Quran Learning</h4>
-                                <p class="mb-4">Lorem ipsum dolor sit amet elit. Donec tempus eros vel dolor mattis aliquam.</p>
-                                <a href="" class="btn btn-primary px-3">Read More</a>
+                                <a href="" class="btn btn-primary px-3" style="margin-top:10px;">Read More</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-xl-3">
-                        <div class="activities-item p-4 wow fadeIn" data-wow-delay="0.1s">
-                            <i class="fa fa-book fa-4x text-dark"></i>
+                        <div class="activities-item p-4 wow fadeIn" data-wow-delay="0.1s" style="flex-direction:column">
+                            <img src="./img/14.jpeg" class="img-fluid" alt="">
                             <div class="ms-4">
-                                <h4>Hadith & Sunnah</h4>
-                                <p class="mb-4">Lorem ipsum dolor sit amet elit. Donec tempus eros vel dolor mattis aliquam.</p>
-                                <a href="" class="btn btn-primary px-3">Read More</a>
+                                <a href="" class="btn btn-primary px-3" style="margin-top:10px;">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -265,20 +257,20 @@
         <!-- Testiminial Start -->
         <div class="container-fluid testimonial py-5">
             <div class="container py-5">
+                <h1 class="display-6 mb-5 wow fadeIn" data-wow-delay="0.1s">Kanzul  <span class="text-primary">Iman</span></h1>
                 <div class="text-center mx-auto mb-5 wow fadeIn" data-wow-delay="0.1s" style="max-width: 700px;">
                 </div>
                 <div class="owl-carousel testimonial-carousel wow fadeIn" data-wow-delay="0.1s">
                     <div class="testimonial-item">
                         <div class="d-flex mb-3">
                             <div class="position-relative">
-                                <img src="img/testimonial-1.jpg" class="img-fluid" alt="">
-                                <div class="btn-md-square bg-primary rounded-circle position-absolute" style="top: 25px; left: -25px;">
-                                    <i class="fa fa-quote-left text-dark"></i>
+                                <img src="img/quran/1.jpeg" class="img-fluid" alt="">
+                                <div class="position-absolute" style="top: 25px; left: -25px;">
                                 </div>
                             </div>
                             <div class="ps-3 my-auto ">
-                                <h5 class="mb-0">Full Name</h5>
-                                <p class="m-0">Profession</p>
+                                <h5 class="mb-0">Para 01</h5>
+                                <p class="m-0">Imam Ahmad Raza</p>
                             </div>
                         </div>
                         <div class="testimonial-content">
@@ -295,14 +287,13 @@
                     <div class="testimonial-item">
                         <div class="d-flex mb-3">
                             <div class="position-relative">
-                                <img src="img/testimonial-2.jpg" class="img-fluid" alt="">
-                                <div class="btn-md-square bg-primary rounded-circle position-absolute" style="top: 25px; left: -25px;">
-                                    <i class="fa fa-quote-left text-dark"></i>
+                                <img src="img/quran/2.png" class="img-fluid" alt="">
+                                <div class="position-absolute" style="top: 25px; left: -25px;">
                                 </div>
                             </div>
                             <div class="ps-3 my-auto ">
-                                <h5 class="mb-0">Full Name</h5>
-                                <p class="m-0">Profession</p>
+                                <h5 class="mb-0">Para 02</h5>
+                                <p class="m-0">Imam Ahmad Raza</p>
                             </div>
                         </div>
                         <div class="testimonial-content">
@@ -319,14 +310,13 @@
                     <div class="testimonial-item">
                         <div class="d-flex mb-3">
                             <div class="position-relative">
-                                <img src="img/testimonial-3.jpg" class="img-fluid" alt="">
-                                <div class="btn-md-square bg-primary rounded-circle position-absolute" style="top: 25px; left: -25px;">
-                                    <i class="fa fa-quote-left text-dark"></i>
+                                <img src="img/quran/3.png" class="img-fluid" alt="">
+                                <div class="position-absolute" style="top: 25px; left: -25px;">
                                 </div>
                             </div>
                             <div class="ps-3 my-auto ">
-                                <h5 class="mb-0">Full Name</h5>
-                                <p class="m-0">Profession</p>
+                                <h5 class="mb-0">Para 03</h5>
+                                <p class="m-0">Imam Ahmad Raza</p>
                             </div>
                         </div>
                         <div class="testimonial-content">
@@ -343,14 +333,13 @@
                     <div class="testimonial-item">
                         <div class="d-flex mb-3">
                             <div class="position-relative">
-                                <img src="img/testimonial-4.jpg" class="img-fluid" alt="">
-                                <div class="btn-md-square bg-primary rounded-circle position-absolute" style="top: 25px; left: -25px;">
-                                    <i class="fa fa-quote-left text-dark"></i>
+                                <img src="img/quran/4.png" class="img-fluid" alt="">
+                                <div class="position-absolute" style="top: 25px; left: -25px;">
                                 </div>
                             </div>
                             <div class="ps-3 my-auto ">
-                                <h5 class="mb-0">Full Name</h5>
-                                <p class="m-0">Profession</p>
+                                <h5 class="mb-0">Para 04</h5>
+                                <p class="m-0">Imam Ahmad Raza</p>
                             </div>
                         </div>
                         <div class="testimonial-content">
