--- a/21 mosque-website-template/404.html
+++ b/21 mosque-website-template/404.html
@@ -41,8 +41,8 @@
 
 
   
-        <!-- Topbar start -->
-        <div class="container-fluid fixed-top">
+         <!-- Topbar start -->
+         <div class="container-fluid fixed-top">
             <div class="container topbar d-none d-lg-block">
                 <div class="topbar-inner">
                     <div class="row gx-0">
@@ -72,7 +72,7 @@
             <div class="container">
                 <nav class="navbar navbar-light navbar-expand-lg py-3">
                     <a href="index.html" class="navbar-brand">
-                        <h1 class="mb-0">THE<span class="text-primary">Mosque</span> </h1>
+                        <h1 class="mb-0">ABUL<span class="text-primary">FATAH</span> </h1>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars text-primary"></span>
