--- a/21 mosque-website-template/index.html
+++ b/21 mosque-website-template/index.html
@@ -108,7 +108,7 @@
                     <div class="col-lg-7">
                         <div class="hero-header-inner animated zoomIn">
                             <p class="fs-4 text-dark">WELCOME TO ABUL FATAH</p>
-                            <img src="./img/events-1.jpg" />
+                            <!-- <img src="./img/events-1.jpg" class="img fluid" alt="img"/> -->
                             <!-- <h1 class="display-1 mb-5 text-dark">Purity Comes From Faith</h1> -->
                             <a href="" class="btn btn-primary py-3 px-5">Read More</a>
                         </div>
@@ -125,8 +125,8 @@
 
 
         <!-- Activities Start -->
-        <div class="container-fluid activities py-5">
-            <div class="container py-5">
+        <div class="container-fluid activities">
+            <div class="container">
                 <h1 class="display-6 mb-5 wow fadeIn" data-wow-delay="0.1s">Islamic <span class="text-primary">Books</span></h1>
                 <div class="row g-4">
                     <div class="col-lg-6 col-xl-3">
@@ -168,8 +168,8 @@
 
 
         <!-- Events Start -->
-        <div class="container-fluid event py-5">
-            <div class="container py-5">
+        <div class="container-fluid event">
+            <div class="container pt-5">
                 <h1 class="display-6 mb-5 wow fadeIn" data-wow-delay="0.1s">Upcoming <span class="text-primary">Events</span></h1>
                 <div class="row g-4 event-item wow fadeIn" data-wow-delay="0.1s">
                     <div class="col-3 col-lg-2 pe-0">
@@ -256,7 +256,7 @@
 
         <!-- Testiminial Start -->
         <div class="container-fluid testimonial py-5">
-            <div class="container py-5">
+            <div class="container pt-5">
                 <h1 class="display-6 mb-5 wow fadeIn" data-wow-delay="0.1s">Kanzul  <span class="text-primary">Iman</span></h1>
                 <div class="text-center mx-auto mb-5 wow fadeIn" data-wow-delay="0.1s" style="max-width: 700px;">
                 </div>
