--- a/21 mosque-website-template/index.html
+++ b/21 mosque-website-template/index.html
@@ -71,7 +71,7 @@
             <div class="container">
                 <nav class="navbar navbar-light navbar-expand-lg py-3">
                     <a href="index.html" class="navbar-brand">
-                        <h1 class="mb-0">ABUL<span class="text-primary">FATAH</span> </h1>
+                        <img src="img/logo/logo_black.jpeg" style="width:90px;height: auto;" class="img-fluid" alt="">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars text-primary"></span>
