added code  in about page

--- a/21 mosque-website-template/about.html
+++ b/21 mosque-website-template/about.html
@@ -123,6 +123,204 @@
 
 
         <!-- About Satrt -->
+
+        <div class="container-fluid activities">
+            <div class="container">
+                <div class="row">
+
+                    <!--Book Div--->
+
+                    <div class="col-md-8 col-lg-9 col-sm-12 order-lg-1 order-2 mt-2">
+
+                        <div class="row g-4 mb-2">
+                        <div class="col-lg-6 col-xl-3 col-6">
+                            <div class="activities-item p-4 wow fadeIn" data-wow-delay="0.1s" style="flex-direction: column; visibility: visible; animation-delay: 0.1s; animation-name: fadeIn;">
+                                <img src="./img/11.jpeg" class="img-fluid" alt="">
+                                <div class="mx-0">
+                                    <a href="" class="btn btn-primary mt-2">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-xl-3 col-6">
+                            <div class="activities-item p-4 wow fadeIn" data-wow-delay="0.1s" style="flex-direction: column; visibility: visible; animation-delay: 0.1s; animation-name: fadeIn;">
+                                <img src="./img/12.jpeg" class="img-fluid" alt="">
+                                <div class="mx-0">
+                                    <a href="" class="btn btn-primary mt-2">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-xl-3 col-6">
+                            <div class="activities-item p-4 wow fadeIn" data-wow-delay="0.1s" style="flex-direction: column; visibility: visible; animation-delay: 0.1s; animation-name: fadeIn;">
+                                <img src="./img/13.jpeg" class="img-fluid" alt="">
+                                <div class="mx-0">
+                                     <a href="" class="btn btn-primary mt-2">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-xl-3 col-6">
+                            <div class="activities-item p-4 wow fadeIn" data-wow-delay="0.1s" style="flex-direction: column; visibility: visible; animation-delay: 0.1s; animation-name: fadeIn;">
+                                <img src="./img/14.jpeg" class="img-fluid" alt="">
+                                <div class="mx-0">
+                                     <a href="" class="btn btn-primary mt-2">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                        </div>
+
+
+
+
+
+                        <div class="row g-4 mb-2">
+                        <div class="col-lg-6 col-xl-3 col-6">
+                            <div class="activities-item p-4 wow fadeIn" data-wow-delay="0.1s" style="flex-direction: column; visibility: visible; animation-delay: 0.1s; animation-name: fadeIn;">
+                                <img src="./img/11.jpeg" class="img-fluid" alt="">
+                                <div class="mx-0">
+                                    <a href="" class="btn btn-primary px-3" style="margin-top:10px;">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-xl-3 col-6">
+                            <div class="activities-item p-4 wow fadeIn" data-wow-delay="0.1s" style="flex-direction: column; visibility: visible; animation-delay: 0.1s; animation-name: fadeIn;">
+                                <img src="./img/12.jpeg" class="img-fluid" alt="">
+                                <div class="mx-0">
+                                    <a href="" class="btn btn-primary px-3" style="margin-top:10px;">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-xl-3 col-6">
+                            <div class="activities-item p-4 wow fadeIn" data-wow-delay="0.1s" style="flex-direction: column; visibility: visible; animation-delay: 0.1s; animation-name: fadeIn;">
+                                <img src="./img/13.jpeg" class="img-fluid" alt="">
+                                <div class="mx-0">
+                                    <a href="" class="btn btn-primary px-3" style="margin-top:10px;">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-xl-3 col-6">
+                            <div class="activities-item p-4 wow fadeIn" data-wow-delay="0.1s" style="flex-direction: column; visibility: visible; animation-delay: 0.1s; animation-name: fadeIn;">
+                                <img src="./img/14.jpeg" class="img-fluid" alt="">
+                                <div class="mx-0">
+                                    <a href="" class="btn btn-primary px-3" style="margin-top:10px;">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                        </div>
+
+
+                        <div class="row">
+                            <div class="col-md-12">
+                                
+                                <nav aria-label="Page navigation example">
+  <ul class="pagination">
+    <li class="page-item">
+      <a class="page-link" href="#" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+      </a>
+    </li>
+    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item"><a class="page-link" href="#">2</a></li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item">
+      <a class="page-link" href="#" aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+      </a>
+    </li>
+  </ul>
+</nav>
+
+                            </div>
+                        </div>
+                    </div>
+
+                     <!--///Book Div--->
+
+                     <!--List Book--->
+                    <div class="col-md-4 col-lg-3 col-sm-12 order-lg-2 order-1 mt-2">
+                        <div class="bg-white shadow-sm">
+                            <div class="card-body">
+
+                              <h4 class="mt-0 mb-3"> Search Books </h4>
+
+                               <div class="input-group mb-3">
+                                 <input type="search" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="search-button">
+                                 <a class="bg-light border btn" type="button" id="search-button"><i class="fa fa-search"></i></a>
+                                </div>
+
+
+                                <div class="input-group mb-3">
+                                <select class="form-select" aria-label="Default select example">
+                                  <option selected>Open this select menu</option>
+                                  <option value="1">One</option>
+                                  <option value="2">Two</option>
+                                  <option value="3">Three</option>
+                                </select>
+                                </div>
+
+
+                                <div class="input-group justify-content-end mb-3">
+                                  <button class="btn btn-primary border-0 px-5" type="button">Send Message</button>
+                                </div>
+
+
+                                 <h4 class="mt-5 mb-3"> Popular Books </h4>
+
+                                <ul class="list-group list-group-flush">
+
+                                  <li class="list-group-item d-flex justify-content-between align-items-start px-0">
+                                       <div class="ms-2 me-auto">
+                                          <i class="fa fa-angle-double-right"></i> Cras justo odio
+                                       </div>
+                                        <span class="badge bg-primary rounded-pill">14</span>
+                                  </li>
+
+                                   <li class="list-group-item d-flex justify-content-between align-items-start px-0">
+                                       <div class="ms-2 me-auto">
+                                          <i class="fa fa-angle-double-right"></i> Cras justo odio
+                                       </div>
+                                        <span class="badge bg-primary rounded-pill">14</span>
+                                  </li>
+
+
+                                   <li class="list-group-item d-flex justify-content-between align-items-start px-0">
+                                       <div class="ms-2 me-auto">
+                                          <i class="fa fa-angle-double-right"></i> Cras justo odio
+                                       </div>
+                                        <span class="badge bg-primary rounded-pill">14</span>
+                                  </li>
+
+
+                                  <li class="list-group-item d-flex justify-content-between align-items-start px-0">
+                                       <div class="ms-2 me-auto">
+                                          <i class="fa fa-angle-double-right"></i> Cras justo odio
+                                       </div>
+                                        <span class="badge bg-primary rounded-pill">14</span>
+                                  </li>
+
+
+                                   <li class="list-group-item d-flex justify-content-between align-items-start px-0">
+                                       <div class="ms-2 me-auto">
+                                          <i class="fa fa-angle-double-right"></i> Cras justo odio
+                                       </div>
+                                        <span class="badge bg-primary rounded-pill">14</span>
+                                  </li>
+
+
+                                </ul>
+
+
+
+
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--List Book--->
+
+
+                </div>
+            </div>
+        </div>
        
         <!-- About End -->
 
