--- a/21 mosque-website-template/index.html
+++ b/21 mosque-website-template/index.html
@@ -70,8 +70,11 @@
             </div>
             <div class="container">
                 <nav class="navbar navbar-light navbar-expand-lg py-3">
-                    <a href="index.html" class="navbar-brand">
-                        <img src="img/logo/logo_black.jpeg" style="width:90px;height: auto;" class="img-fluid" alt="">
+                    <a href="index.html" >
+                    <!-- <h1 class="mb-0"><span class="text-primary"> ابوالفتح</span> </h1> -->
+                    <!-- مظہر اعلیٰ حضرت -->
+                    <!-- ابوالفتح -->
+                        <img src="img/logo/logo_black.jpeg" style="width:120px;" class="img-fluid" alt="">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars text-primary"></span>
